--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Shaxsiy portfolio web saytim</title>
     <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
+    <script>src="https://code.jquery.com/jquery-3.5.1.min.js"</script>
 </head>
 <body>
     <nav class ="navbar">
@@ -33,6 +34,16 @@
             </div>
         </div>
     </section>
+<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Amet officiis eveniet nesciunt harum deleniti tenetur consequatur eos corporis, officia, culpa dolores quas molestiae. Natus aspernatur dicta, id suscipit, dolorum accusantium 
+    fugit corrupti consequuntur temporibus, nulla assumenda voluptatibus quidem quo debitis possimus dignissimos saepe ipsum. Numquam minima ut, distinctio doloremque quos veniam optio voluptas maiores magni aspernatur. Aspernatur iste magnam animi? Dolorem distinctio iure repellat laboriosam quod 
+    id fuga laudantium nisi quas voluptas ducimus assumenda possimus officiis, minima odio cum sequi velit! Minus, accusamus optio et cum in aliquam quidem dicta fuga debitis ex expedita? Sequi quo debitis dolorum temporibus, aperiam beatae repudiandae accusantium, porro ratione perspiciatis dolores voluptatum 
+    nesciunt! Iusto in, quia fugit enim quibusdam ipsa rerum accusamus similique minus. Asperiores, nulla qui necessitatibus maxime obcaecati eius magni enim repellat ab! Praesentium soluta sed velit quod magni porro inventore, dicta dolor non illum, earum maxime id sunt. Autem tenetur ullam, deleniti inventore 
+    dolorem facilis eius, accusamus dolore, nostrum veritatis molestias corrupti. Inventore, ipsum eos similique possimus 
+    ratione aliquid odit consequatur dolore quae, exercitationem tempora itaque iure adipisci blanditiis repudiandae, doloremque quo hic. Saepe, voluptate? Illum reprehenderit cupiditate, illo laudantium minus itaque eaque iste consequuntur earum, obcaecati, error veniam 
+    asperiores dolore?</p>
+
+
+    <script src="script.js"></script>
 
 </body>
 </html>
